# notepad-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.toml  plugin_config.json  plugin_list.toml  plugin_registry.json  plugin_registry.toml  requested_plugins.toml  system.json
include/: CMakeLists.txt  environment_api.h  logger_api.h  plugin_api.h  plugin_impl.h  plugin_manager_api.h  plugin_manager_common.h  project_common.h  system_api.h  test_api.h  test_api_2.h  window_api.h
lib/: CMakeLists.txt
lib/cglm/: CMakeLists.txt
lib/jsmn/: CMakeLists.txt
lib/plugin_loader/: CMakeLists.txt  plugin_loader.c  plugin_loader.h  plugin_loader_config_reader.c  plugin_loader_config_reader.h  plugin_loader_json_parser.c  plugin_loader_json_parser.h
lib/plugin_manager/: CMakeLists.txt  PluginFramework.cmake  PluginManagerSetup.cmake  file_io.c  file_io.h  plugin_manager.c  plugin_manager.h  plugin_manager_get_setup_context.c.in  plugin_manager_get_setup_context.h  plugin_manager_init_contexts.c.in  plugin_manager_loader.c  plugin_manager_loader.h  plugin_manager_types.h  plugin_registry.c  plugin_registry.c.in  plugin_registry.h
lib/plugin_manager/cmake/: PluginManagerGenerate.cmake  PluginSDK.cmake
lib/plugin_manager/internal_plugins/: CMakeLists.txt  environment_default.c  environment_default.h  (+6 more)
lib/plugin_manager_bootloader/: CMakeLists.txt
lib/static_alloc/: static_alloc.c  static_alloc.h
lib/test_lib/: CMakeLists.txt
lib/test_lib_i/: CMakeLists.txt
lib/vma/: CMakeLists.txt  vk_mem_alloc.cpp  vk_mem_alloc.h
plugin/logger_composite/: CMakeLists.txt  logger_composite.c  logger_composite_register.c  logger_composite_register.h  manifest.toml
plugin_manager_bootloader/: CMakeLists.txt  plugin_manager_bootloader.c  plugin_manager_bootloader_generated.c.in  plugin_manager_bootloader_generated.h  plugin_manager_bootloader_main.c  plugin_metadata.c.in  plugin_registry.c.in
plugin_manager_bootloader/cmake/: PluginManagerBootloaderGenerate.cmake  PluginSDK.cmake
plugin_manager_bootloader/old_c/: plugin_manager.c  plugin_manager_init_contexts.c.in  plugin_manager_loader.c  plugin_manager_types.h  plugin_registry.json
plugin_manager_common/: app_api.h  application_api.h  input_api.h  logger_api.h  plugin_manager_api.h  plugin_manager_common.h  window_api.h  window_api_window_event.h  window_api_window_event_enums.h
plugin_manager_include/: CMakeLists.txt  draw_interface.h  environment_interface.h  gui_application_interface.h  input_interface.h  logger_interface.h  plugin_framework.h  plugin_manager_pm_interface.h  plugin_sdk.h  plugin_sdk_types.h  plugin_utils.h  renderer_interface.h  window_interface.h
plugin_sdk/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/app_plugin/: CMakeLists.txt  app_plugin.c  app_plugin.h  app_plugin_register.c  app_plugin_register.h
plugins/application_plugin/: CMakeLists.txt  application_plugin.c  application_plugin.h  application_plugin_register.c  application_plugin_register.h
plugins/draw_2d_default/: CMakeLists.txt  draw_2d_default.c  draw_2d_default_register.c  draw_2d_default_register.h  manifest.toml
plugins/draw_default/: CMakeLists.txt  draw_default.c  draw_default.h  draw_default_register.c  draw_default_register.h  manifest.toml
plugins/draw_plugin/: draw_plugin.c  draw_plugin.h
plugins/environment_default/: CMakeLists.txt  environment_default_register.c  manifest.toml
plugins/gui_application_default/: CMakeLists.txt  gui_application_default.c  gui_application_default.h  gui_application_default_register.c  gui_application_default_register.h  manifest.toml
plugins/gui_application_plugin/: gui_application_plugin.c
plugins/input_default/: CMakeLists.txt  input_default.c  input_default.h  input_default_register.c  input_default_register.h  manifest.toml
plugins/input_plugin/: CMakeLists.txt  input_plugin.c  input_plugin.h  input_plugin_register.c  input_plugin_register.h
plugins/logger_console/: CMakeLists.txt  logger_console.c  logger_console_register.c  manifest.toml
plugins/plugin_manager_default/: CMakeLists.txt  manifest.toml  plugin_manager_default.c  plugin_manager_default.h  plugin_manager_default_bootstrap.c  plugin_manager_default_bootstrap.h  plugin_manager_default_register.c  plugin_manager_default_register.h
plugins/renderer_vulkan/: CMakeLists.txt  manifest.toml  renderer_vulkan.c  renderer_vulkan.h  renderer_vulkan_bootstrap.c  renderer_vulkan_bootstrap.h  renderer_vulkan_descriptor_set.c  renderer_vulkan_descriptor_set.h  renderer_vulkan_platform_win32.c  renderer_vulkan_register.c  renderer_vulkan_register.h  renderer_vulkan_render.c  renderer_vulkan_render.h  renderer_vulkan_start.c  renderer_vulkan_start.h  renderer_vulkan_utils.c  renderer_vulkan_utils.h  vma_implementation.cpp
plugins/test_plugin/: CMakeLists.txt  test_plugin.c  test_plugin.h
plugins/test_plugin_2/: CMakeLists.txt  test_plugin_2.c  test_plugin_2.h
plugins/window_win32/: CMakeLists.txt  manifest.toml  window_win32.c  window_win32.h  window_win32_key_converter.c  window_win32_key_converter.h  window_win32_register.c  window_win32_register.h  window_win32_window_events.c  window_win32_window_events.h
plugins/window_win32_plugin/: CMakeLists.txt  window_win32_plugin.c  window_win32_plugin.h  window_win32_plugin_key_converter.c  window_win32_plugin_key_converter.h  window_win32_plugin_register.c  window_win32_plugin_register.h  window_win32_plugin_window_events.c  window_win32_plugin_window_events.h
sdk/cmake/: PluginSDK.cmake
sdk/scripts/: plugin_sdk_generate.py
sdk/tools/: utils.py
src/: CMakeLists.txt  TODO.md  main.c  main_.c
src/graphics/: gfx.h
src/graphics/graphics_d2d/: renderer_d2d.c  renderer_d2d.h
src/graphics/graphics_vk/: graphics_vk.c  graphics_vk.h
src/logging/: logging.c  logging.h
src/old/renderer/renderer_vk/: renderer_vk.h
src/plugin_loader/: CMakeLists.txt  plugin_loader.c  plugin_loader.h
src/renderer/: renderer.h
src/renderer/renderer_vk/: CMakeLists.txt  renderer_vk.c  renderer_vk.h  renderer_vk_utils.h
src_test/: CMakeLists.txt  main.c
tools/: gen_plugin.py
(+59 files in other folders)
